--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     </head>
     <body>
         <div class="section">
-            <h1><span>About Rabiya></h1>
+            <h1><span>About Rabiya</h1>
             <p>
             I'm Rabiya. I'm 19 years old.
             </p>
-            <p class="quote">"Declare variables, not war"</p>
+            <p class="quote">"Rabiya Jannazarova"</p>
         </div>
     </body>
 </html>
