--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>HomePage</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
     </head>
     <body>
         <div class="section">
-            <h1><span>About Rabiya</h1>
-            <p>
-            I'm Rabiya. I'm 19 years old.
+            <h1 id="HomePage"><span>RABIYA'S HOMEPAGE😄</h1>
+            <p id="wed"><a href="abtme.html">About Me</a>
             </p>
-            <p class="quote">"Rabiya Jannazarova"</p>
+           <img src="">
+        </div>
+        <div class="sectio">
+           <p id="wed">What I do: </p>
+           <ul id="lis">
+               <li>Translate Documents</li>
+               <li>Type Documents</li>
+               <li>Create Blogs</li>
+               <li>Make Presentations about any topic</li>
+
+           </ul>
         </div>
     </body>
+
 </html>
+    
