--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <div id="headear">
             <a href="abtme.html"><button id="but">About Me</button></a>
                 <a href="lakes.html"><button id="but">Lakes</button></a>
+                <a href="sth.html"><button id="but">Dont Press</button></a>
             </p>
           </div>
            <img src="">
