--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             <a href="abtme.html"><button id="but">About Me</button></a>
                 <a href="lakes.html"><button id="but">Lakes</button></a>
                 <a href="sth.html"><button id="but">Dont Press</button></a>
+                <a href="find the flower.html"><button id="but">Flower quiz</button></a>
+                
             </p>
           </div>
            <img src="">
