Update find the flower.html

--- a/find the flower.html
+++ b/find the flower.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
         <title>Find the flower</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="flowerstyle.css">
         <link rel="stylesheet" type="text/css"
         href="https://fonts.googleapis.com/css?family=Tangerine">
         <link rel="stylesheet" type="text/css"
